Arrumando pacotes resource e service, arrumando erros e adicionando dependencias no pom.xml